[gd_scene load_steps=3 format=3 uid="uid://2pplfjtod5nw"]

[ext_resource type="Theme" uid="uid://bm65wt0oy8xkf" path="res://assets/themes/default_theme.tres" id="1_i4rg2"]
[ext_resource type="Script" uid="uid://c0xgmrno4yo5a" path="res://game/menu/pause_menu.gd" id="2_e1jsn"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_i4rg2")
script = ExtResource("2_e1jsn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.286275)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.5
offset_right = 28.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="UnpauseButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="SettingsButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="Control" type="Control" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit To Menu"

[node name="QuitButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit To Desktop"
